force-app/main/default/objects/BWP_Customer__c/fields/Billing_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Address_2__c</fullName>
    <description>Address line 2 (Apartment/Suite/Unit/Building).</description>
    <inlineHelpText>Apartment/Suite/Unit/Building</inlineHelpText>
    <label>Billing Street Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>