force-app/main/default/objects/BWP_Customer__c/fields/Created_Date_in_Processor__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_in_Processor__c</fullName>
    <label>Created Date in Processor</label>
    <type>DateTime</type>
</CustomField>