force-app/main/default/objects/BWP_Customer__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Three-letter ISO code for the currency the customer can be charged in for recurring billing purposes.</description>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>