force-app/main/default/objects/BWP_Customer__c/fields/Customer_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Balance__c</fullName>
    <description>Current balance, if any, is stored on the customer’s account. If negative, the customer has credit to apply to the next invoice. If positive, the customer has an amount owed that will be added to the next invoice. The balance does not refer to any unpaid invoices; it solely takes into account amounts that have yet to be successfully applied to any invoice. This balance is only taken into account as invoices are finalized. Note that the balance does not include unpaid invoices.</description>
    <label>Customer Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>