force-app/main/default/objects/BWP_Customer__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>This field is used to store the CustomerId-MerchantType-MerchantID</description>
    <inlineHelpText>This field is used to store the CustomerId-MerchantType-MerchantID</inlineHelpText>
    <label>Customer ID (Unique)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>