force-app/main/default/objects/BWP_Customer__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>The customer’s full name or business name.</description>
    <inlineHelpText>The customer’s full name or business name.</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>