force-app/main/default/objects/BWP_Customer__c/fields/Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Delinquent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the customer’s latest invoice is billed by charging automatically, this is true if the invoice’s latest charge is failed. When the customer’s latest invoice is billed by sending an invoice, this is true if the invoice is not paid by its due date.</description>
    <inlineHelpText>When the customer’s latest invoice is billed by charging automatically, this is true if the invoice’s latest charge is failed. When the customer’s latest invoice is billed by sending an invoice, this is true if the invoice is not paid by its due date.</inlineHelpText>
    <label>Delinquent</label>
    <type>Checkbox</type>
</CustomField>