force-app/main/default/objects/BWP_Customer__c/fields/Has_Successful_Payments__c.field-meta.xml
<CustomField>
    <fullName>Has_Successful_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Successful Payments</label>
    <type>Checkbox</type>
</CustomField>