force-app/main/default/objects/BWP_Customer__c/fields/Invoice_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Prefix__c</fullName>
    <description>The prefix for the customer used to generate unique invoice numbers. Must be 3–12 uppercase letters or numbers.</description>
    <inlineHelpText>The prefix for the customer used to generate unique invoice numbers. Must be 3–12 uppercase letters or numbers.</inlineHelpText>
    <label>Invoice Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>