force-app/main/default/objects/BWP_Customer__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The customer’s Last Name.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>