force-app/main/default/objects/BWP_Customer__c/fields/Processor_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Processor_Org_Name__c</fullName>
    <label>Processor Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>