force-app/main/default/objects/BWP_Customer__c/fields/Salesforce_Account__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers (Breadwinner Payments)</relationshipLabel>
    <relationshipName>BWP_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>