force-app/main/default/objects/BWP_Customer__c/fields/Salesforce_Contact__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customers (Breadwinner Payments)</relationshipLabel>
    <relationshipName>BWP_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>