force-app/main/default/objects/BWP_Customer__c/fields/Shipping_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Addressee__c</fullName>
    <label>Shipping Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>