force-app/main/default/objects/BWP_Customer__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>