force-app/main/default/objects/BWP_Customer__c/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <label>Tax Exempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>