force-app/main/default/objects/BWP_Customer__c/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <description>The customer’s tax information. Appears on invoices emailed to this customer.</description>
    <label>Tax IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>