force-app/main/default/objects/BWP_Customer__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>vat</fullName>
                <default>true</default>
                <label>vat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>